# physical-AI-and-humanoid-robotics-textbook-by-shakir-hussain

./: .dockerignore  .env.example  .gitignore  ALL_CHAPTERS_TRANSLATION_READY.md  AUTH_IMPLEMENTATION.md  CHATBOT_QUICKFIX.md  CHATBOT_SETUP.md  CHATBOT_UI_IMPROVEMENTS.md  Dockerfile  FINAL_SETUP.md  LOCAL_DEVELOPMENT_GUIDE.md  LOCAL_TESTING_GUIDE.md  PERSONALIZATION_FEATURE_STATUS.md  PERSONALIZATION_SETUP.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  Procfile  QUICK_START.md  RAG_CHATBOT_RESPONSE_DEMO.md  README.md  RUN_LOCAL.md  SETUP_AUTH.md  TEST_RESULTS.md  TRANSLATION_FEATURE_COMPLETE.md  TRANSLATION_FEATURE_GUIDE.md  TRANSLATION_FEATURE_SUMMARY.md  URDU_TRANSLATION_COMPLETE_STATUS.md  docusaurus.config.js  docusaurus.config.update.js  package-lock.json  package.json  railway.toml  sidebars.js  space_env.txt  start.sh  test_agent_demo.py  test_orchestrator_update.py  test_personalization_api.py  verify_translation_feature.py
.github/workflows/: deploy.yml
.skills/: config.json  test-skills.js
.skills/content-generation/: code-example-generator.skill  concept-explainer.skill  diagram-generator.skill  exercise-creator.skill
.skills/interactive-elements/: case-study-builder.skill  quiz-generator.skill  scenario-creator.skill
.skills/quality-assurance/: accessibility-reviewer.skill  consistency-checker.skill  technical-validator.skill
.skills/structure-organization/: module-architect.skill  prerequisite-analyzer.skill  progression-optimizer.skill
.specify/: README.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
backend/: .dockerignore  .env.example  .env.ingestion.example  .env.production  .gitignore  AUTH_IMPLEMENTATION.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_GUIDE.md  PERSONALIZATION_FEATURE_STATUS.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-essential.txt  requirements-light.txt  requirements-simple.txt  requirements.txt  simple_backend.py  simple_chat_server.py  test_app.py  test_system.py
backend/.specify/memory/: constitution.md
backend/history/prompts/1-rag-chatbot-backend/: 001-rag-chatbot-specification.spec.prompt.md  002-rag-chatbot-clarifications.clarify.prompt.md  003-rag-chatbot-implementation-plan.plan.prompt.md  004-rag-chatbot-task-decomposition.tasks.prompt.md  005-rag-chatbot-implementation-phase1.red.prompt.md
backend/history/prompts/constitution/: 001-establish-backend-rag-constitution.constitution.prompt.md
backend/specs/1-rag-chatbot-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/specs/1-rag-chatbot-backend/checklists/: requirements.md
backend/specs/1-rag-chatbot-backend/contracts/: openapi.yaml
backend/src/: __init__.py  app.py  config.py  main.py  main_simple.py
backend/src/api/: __init__.py  auth.py  chapter_personalization.py  chat.py  content.py  context.py  health.py  query.py  translation.py
backend/src/db/: __init__.py  postgres.py  qdrant_client.py
backend/src/middleware/: __init__.py  api_key_auth.py  error_handler.py  logging_middleware.py
backend/src/models/: __init__.py  audit.py  chapter_personalization.py  entities.py  schemas.py  user.py
backend/src/services/: audit_logger.py  auth_service.py  citations.py  content_ingest.py  generation.py  personalization_service.py  rag_service.py  rag_service_old.py  retrieval.py  translation_service.py
backend/src/utils/: __init__.py  constants.py  exceptions.py  tracing.py  validation.py
backend/tests/: __init__.py  test_concurrent_endpoints.py  test_libretranslate.py  test_translation_chapters.py  test_urdu_translation.py  verify_setup.py
chatbot/: .env.example  main.py  requirements.txt
docs/: railway-deployment.md
frontend/: sidebars.js
frontend/docs/: intro.md
frontend/docs/code-examples/module-1/chapter-04/custom_msgs/: CMakeLists.txt  package.xml
frontend/docs/code-examples/module-1/chapter-04/custom_msgs/action/: ExecuteBehavior.action
frontend/docs/code-examples/module-1/chapter-04/custom_msgs/msg/: AICommand.msg  AICommandResult.msg  RobotState.msg
specs/001-ros2-module-chapters/: plan.md  spec.md  tasks.md
specs/002-digital-twin-module/: plan.md  spec.md  tasks.md
specs/003-isaac-module/: plan.md  spec.md  tasks.md
specs/004-vla-module/: plan.md  spec.md  tasks.md
specs/1-rag-chatbot-backend/: plan.md  spec.md  tasks.md
specs/2-website-ingestion/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/3-data-retrieval/: plan.md  spec.md  tasks.md
specs/4-rag-agent/: plan.md  spec.md  tasks.md
specs/5-fastapi-integration/: plan.md  spec.md  tasks.md
src/components/: AuthForm.jsx  ChapterTranslateButton.jsx  (+8 more)
(+149 files in other folders)
