<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Physical AI & Humanoid Robotics Textbook
Module 1, Chapter 4: Custom Messages Package
Description: ROS 2 package containing AI-robot interface definitions
Build: colcon build --packages-select humanoid_ai_msgs
-->
<package format="3">
  <name>humanoid_ai_msgs</name>
  <version>1.0.0</version>
  <description>
    Custom message, service, and action definitions for AI-robot integration.
    Part of the Physical AI and Humanoid Robotics textbook curriculum.
  </description>

  <maintainer email="student@example.com">Textbook Student</maintainer>
  <license>Apache-2.0</license>

  <author email="author@textbook.com">Physical AI Textbook Authors</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for message types used in our definitions -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Required for message generation -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Member of rosidl_interface_packages group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
